# tactics_simulation

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
cmake/: common.cmake
conf/: system_template_config.yaml
docs/cross_build/: aarch64.sh
docs/input/: inital_condition.json  input.json  kill_chain_zfj.json
docs/rules/: zhanfa.md  zhanfa.txt
src/app/: AppConstants.h  CMakeLists.txt  main.cpp  test.cpp  test.h
src/core/: CMakeLists.txt
src/core/config/: CMakeLists.txt
src/core/config/include/config/: ClientConfig.h
src/core/config/src/: ClientConfig.cpp
src/core/log/: CMakeLists.txt
src/core/log/include/log/: Log.h
src/core/log/src/: Log.cpp
src/modules/: CMakeLists.txt
src/modules/message_sender/: CMakeLists.txt
src/modules/message_sender/include/: MessageSender.h
src/modules/message_sender/src/: MessageSender.cpp
src/modules/result_receiver/: CMakeLists.txt
src/modules/result_receiver/include/: ResultReceiver.h  TestEvent.h
src/modules/result_receiver/src/: ResultReceiver.cpp  TestEvent.cpp
src/modules/tactics_reader/: CMakeLists.txt
src/modules/tactics_reader/include/: Entity.h  TacticsReader.h
src/modules/tactics_reader/src/: Entity.cpp  TacticsReader.cpp
